# FTP-client

./: CMakeLists.txt  FTP.pro  main.cpp  mainwindow.ui  readme.md  说明.txt
UI/: FTP.pro  FileMsg.cpp  FileMsg.h  app.rc  connect_server.cpp  connect_server.h  connect_server.ui  ftpmain.cpp  ftpmain.h  ftpmain.ui  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
UI/Concurrent/: FTPDataThread.cpp  FTPDataThread.h  JhButton.cpp  JhButton.h  JhProgressBar.cpp  JhProgressBar.h
UI/MainWindow/LocalEnd/: LocalWidgetSetUp.cpp  localMenuSetup.cpp
UI/MainWindow/RemoteEnd/: RemoteMenuSetup.cpp  RemoteWidgetSetUp.cpp
ftpsock/: Thread_Download.cpp  Thread_Upload.cpp  download.cpp  download.h  ftpdata.cpp  ftpdata.h  login.cpp  login.h  qThread.cpp  qThread.h  upload.cpp  upload.h  upload_qThread.cpp  upload_qThread.h
utils/: ErrorCode.cpp  ErrorCode.h  commands.cpp  commands.h  resource.h  utils.cpp  utils.h
